# pypz-examples

./: Dockerfile  README.md  pipeline.yml  pyproject.toml
src/pypz/example/: deploy.py  deploy_with_error_handling.py  deploy_with_k8s_secret.py  execute.py  execute_from_yml.py  get_param_schema.py  pipeline.py  reader.py  rmq_pipeline.py  sniffer.py  sniffer_deployed_pipeline.py  writer.py
